objects/EUR_CRM_ObjPromo_to_PROS_Segment_Mapping__c.object
<CustomObject>
    <description>Used to specify per O/P which EUR Accounts with the selected PROS Segments will be included in the O/P</description>
    <fields>
        <fullName>EUR_CRM_Group_Outlet_Type__c</fullName>
        <label>Group Outlet Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Restaurant</fullName>
                </value>
                <value>
                    <fullName>Low Energy Bar</fullName>
                </value>
                <value>
                    <fullName>High Energy Bar</fullName>
                </value>
                <value>
                    <fullName>Nightclub</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Image_Level__c</fullName>
        <label>Image Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Iconic</fullName>
                </value>
                <value>
                    <fullName>Leading</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>Mainstream</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_ObjPromo__c</fullName>
        <label>Objectives / Promotions</label>
        <referenceTo>EUR_CRM_ObjPromo__c</referenceTo>
        <relationshipName>OP_PROS_Segment_Mappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>O/P - PROS Segment Mapping (EU)</label>
    <nameField>
        <displayFormat>OPPSM-{0000000000}</displayFormat>
        <label>O/P - PROS Segment Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>O/P - PROS Segment Mapping (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_FI_OP_PROS_Segment_Mapping</fullName>
        <active>true</active>
        <label>EUR FI O/P - PROS Segment Mapping</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>